--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,7 @@ jdk:
 
 cache:
   directories:
-    - download
     - $HOME/.cache/pip
-    - $HOME/miniconda/envs/test      # to avoid repetitively setting up Ana/Miniconda environment
     - parser                         # to avoid repetitively downloading CoreNLP
 
 addons:
@@ -23,22 +21,13 @@ addons:
     packages:
     # CoreNLP needs Java 8
     - oracle-java8-installer
+    - python-tk
 
 # Following trick is necessary to get a binary distribution of numpy, scipy, etc. which takes too long to build every time
 # See: http://stackoverflow.com/q/30588634
 # See: https://github.com/Theano/Theano/blob/master/.travis.yml (for caching)
 # See: http://conda.pydata.org/docs/travis.html
 before_install:
-  - deactivate  # leaving Travis' virtualenv first since otherwise Jupyter/IPython gets confused with conda inside a virtualenv (See: https://github.com/ipython/ipython/issues/8898)
-  - mkdir -p download
-  - cd download
-  - travis_retry wget -c http://repo.continuum.io/miniconda/Miniconda-3.8.3-Linux-x86_64.sh -O miniconda.sh
-  - chmod +x miniconda.sh
-  - bash miniconda.sh -b -f -p ~/miniconda
-  - cd ..
-  - export PATH=~/miniconda/bin:$PATH
-  - conda update --yes conda
-
   # Make sure Java 8 is used
   - export PATH="/usr/lib/jvm/java-8-oracle/bin:$PATH"
   - export JAVA_HOME=/usr/lib/jvm/java-8-oracle
@@ -49,12 +38,10 @@ before_install:
 
 install:
   # Install binary distribution of scientific python modules
-  - test -e ~/miniconda/envs/test/bin/activate || ( rm -rf ~/miniconda/envs/test; conda create --yes -n test python=$TRAVIS_PYTHON_VERSION )
-  - source activate test
-  - conda install --yes numpy scipy matplotlib pip
+  - pip install numpy scipy matplotlib
 
   # Install Numba
-  - conda install --yes numba
+  - pip install numba
 
   # Install all remaining dependencies as per our README
   - pip install -r python-package-requirement.txt
